# rusty-robot

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  build.rs  diagram.json  network.conf  requirements.txt  rustfmt.toml  wokwi.toml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/actions/: check-rusty-robot.yml
.github/actions/check-rusty-robot/: action.yml
.github/workflows/: ci.yml  issue_handler.yml
Community/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  MAINTAINERS.md
app/: Cargo.toml  app.py
app/examples/: dev-server-mcu.rs  dev-server.rs
app/src/: main.rs
app/templates/: index.html
comms/: Cargo.toml
comms/src/: lib.rs  messages.rs  server.rs
hardware/: Cargo.toml  build.rs
hardware/boards/esp32/: Cargo.toml
hardware/boards/esp32/.cargo/: config.toml
hardware/boards/esp32/src/: lib.rs
hardware/boards/local/: Cargo.toml
hardware/boards/rp2040/: Cargo.toml  build.rs
hardware/boards/rp2040/.cargo/: config.toml
hardware/mcu/esp32/: Cargo.toml
hardware/mcu/esp32/.cargo/: config.toml
hardware/mcu/esp32/src/: lib.rs
hardware/mcu/local/: Cargo.toml
hardware/mcu/local/src/: lib.rs
hardware/mcu/rp2040/: Cargo.toml  build.rs
hardware/mcu/rp2040/.cargo/: config.toml
hardware/mcu/rp2040/src/: lib.rs
hardware/src/: lib.rs  motor.rs  servo.rs
server/: Cargo.toml
server/examples/: dev-server-mcu.rs  dev-server.rs
server/src/: lib.rs  messages.rs  server.rs
src/: hw_fn.rs  main.rs  network_access.rs  new.rs  prelude.rs  rp_main.rs  website.rs
src/hardware/: hw.rs  mod.rs  motor_ctrl.rs  servo_ctrl.rs
src/network/: ctrl_sginal.rs  http.rs  index.html  mod.rs  ntwk.rs  server.rs  websockets.rs
xtask/: Cargo.toml
xtask/src/: cargo.rs  lib.rs  main.rs
