[package]

name = "tkr-app"
version = "0.1.0"
authors = ["Michael Guerrier <token.thinkers@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[profile.dev.package.esp-wifi]
opt-level = 3


##########################################################
#               Core Project Dependencies                #
##########################################################
[dependencies]

log = "^0.4.21"
defmt = "^0.3.6"

embedded-io = "^0.6.1"
embedded-hal-02 = { package = "embedded-hal", version = "^0.2.7", features = ["unproven"] }
embedded-hal-1 = { package = "embedded-hal", version = "^1.0" }


embassy-time = "^0.3.0"
embassy-macros = "^0.2.1"
embassy-futures = "^0.1.1"
embassy-executor = "^0.5.0"
embassy-sync = "^0.5.0"
#embassy-net = {version = "^0.4.0", features = ["proto-ipv4","proto-ipv6"]}
#embassy-net-driver = "^0.2.0"


picoserve = "^0.9.1"


smoltcp = { version = "^0.11.0", default-features = false, features = [
    "socket-udp",
    "proto-igmp",
    "proto-ipv4",
    "socket-raw",
    "socket-tcp",
    "socket-icmp",
    "proto-dhcpv4",
    "socket-dhcpv4",
    "medium-ethernet",
] }
static_cell = { version = "^2.0.0", features = ["nightly"] }

serde = { version = "^1.0.197", default-features = false, features = ["derive"] }
serde_json = { version = "^1.0.114", features = ["alloc"], default-features = false }


##########################################################
#              RP2040-Specific Dependencies              #
##########################################################
[target.thumbv6m-none-eabi.dependencies]

embassy-rp = "^0.1.0"

##########################################################
#              ESP32-Specific Dependencies               #
##########################################################
[target.xtensa-esp32-none-elf.dependencies]

esp-println = { version = "^0.9.1", features = ["log", "esp32"] }
esp-alloc = "^0.3.0"

hal = { package = "esp-hal", version = "^0.16.0", features = [
    "esp32",
    "log",
    "async",
    "embassy",
    "vectored",
    "embassy-time-timg0",
    "embassy-executor-thread",
    "embassy-executor-interrupt",
] }

#esp-wifi = { version = "^0.3.0", features = [
#    "wifi",
#    "async",
#    "esp32",
#    "utils",
#    "esp-now",
#    "wifi-logs",
#    "embassy-net",
#] }

esp-backtrace = { version = "^0.11.1", features = [
    "esp32",
    "println",
    "panic-handler",
    "exception-handler",
    "defmt"
] }
