[workspace]

resolver = "2"
members = [
    "server",
    "hardware",
    "hardware/mcu/esp32",
    "hardware/mcu/local",
    "hardware/mcu/rp2040",
]


[workspace.dependencies]

log = "^0.4"
defmt = "^0.3"
anyhow = "^1.0"
rstest = "^0.21"
itertools = "^0.13"
once_cell = "^1.19"
embedded-io = "^0.6"
embedded-hal = "^1.0"
embassy-sync = "^0.6"
embassy-macros = "^0.2"
embassy-futures = "^0.1"
embassy-executor = "^0.5"
pretty_assertions = "^1.4"
static_cell = { version = "^2.0", features = ["nightly"] }
embassy-time = { version = "^0.3", features = ["generic-queue"] }
tracing-subscriber = { version = "^0.3", default-features = false }
serde = { version = "^1", default-features = false, features = ["derive"] }
serde_json = { version = "^1", features = ["alloc"], default-features = false }
tracing = { version = "^0.1", default-features = false, features = ["log", "attributes"] }
embassy-net = { version = "^0.4", features = ["proto-ipv4", "tcp", "udp", "dns", "medium-ethernet", "dhcpv4"] }
