[package]

name = "tkr-hardware"
version = "0.1.0"
authors = [
    "Michael Guerrier <token.thinkers@gmail.com>",
    "Mark S. <the@wondersmith.dev>",
]
edition = "2021"
license = "MIT OR Apache-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]

board = []
default = []

# the features below are used internally
# by the crate's build script, and should
# *NOT* be used or referenced otherwise
_esp32 = ["dep:tkr-hardware-board-esp32"]
_local = ["dep:tkr-hardware-board-local"]
_rp2040 = ["dep:tkr-hardware-board-rp2040"]


[dependencies]

serde = { workspace = true }
embassy-sync = { workspace = true }
embassy-time = { workspace = true }
embedded-hal = { workspace = true }

tkr-hardware-board-esp32 = { path = "boards/esp32", optional = true }
tkr-hardware-board-local = { path = "boards/local", optional = true }
tkr-hardware-board-rp2040 = { path = "boards/rp2040", optional = true }


[build-dependencies]

anyhow = { workspace = true }
