[package]

name = "tkr-hardware"
version = "0.1.0"
authors = [
    "Michael Guerrier <token.thinkers@gmail.com>",
    "Mark S. <the@wondersmith.dev>",
]
edition = "2021"
license = "MIT OR Apache-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]

mcu = []
default = ["mcu"]

# the features below are used internally
# by the crate's build script, and should
# *NOT* be used or referenced otherwise
_esp32 = ["dep:tkr-hardware-mcu-esp32"] #This is what is causing the issue, if commet it out and remove option it compiles
_local = ["dep:tkr-hardware-mcu-local"]
_rp2040 = ["dep:tkr-hardware-mcu-rp2040"]


[dependencies]

serde = { workspace = true }
embassy-sync = { workspace = true }
embassy-time = { workspace = true }
embedded-hal = { workspace = true }
embassy-net = {workspace = true}

tkr-hardware-mcu-esp32 = { path = "mcu/esp32", optional = true} #If I remove the optional it works for compiling
tkr-hardware-mcu-local = { path = "mcu/local", optional = true }
tkr-hardware-mcu-rp2040 = { path = "mcu/rp2040", optional = true }


[build-dependencies]

anyhow = { workspace = true }
