[package]

name = "rr-hardware"
version = "0.1.0"
authors = [
    "Michael Guerrier <token.thinkers@gmail.com>",
    "Mark S. <the@wondersmith.dev>",
]
edition = "2021"
license = "MIT OR Apache-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]

mcu = []
default = ["mcu"]

# the features below are used internally
# by the crate's build script, and should
# *NOT* be used or referenced otherwise
esp32 = ["dep:rr-hardware-mcu-esp32"]
local = ["dep:rr-hardware-mcu-local"]
rp2040 = ["dep:rr-hardware-mcu-rp2040"]


[dependencies]

serde = { workspace = true }
embassy-sync = { workspace = true }
embassy-time = { workspace = true }
embedded-hal = { workspace = true }
embassy-net = {workspace = true}

rr-hardware-mcu-esp32 = { path = "mcu/esp32", optional = true}
rr-hardware-mcu-local = { path = "mcu/local", optional = true }
rr-hardware-mcu-rp2040 = { path = "mcu/rp2040", optional = true }


[build-dependencies]

anyhow = { workspace = true }
