[package]

name = "tkr-server"
version = "0.1.0"
authors = [
    "Michael Guerrier <token.thinkers@gmail.com>",
    "Mark S. <the@wondersmith.dev>",
]
edition = "2021"
license = "MIT OR Apache-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]

default = []
board = ["hardware/board"]


[dependencies]

tracing = { workspace = true }
embassy-net = { workspace = true }
static_cell = { workspace = true }
embassy-sync = { workspace = true }
embassy-time = { workspace = true }
embassy-executor = { workspace = true }
picoserve = { version = "^0.11", features = ["embassy"] }
hardware = { package = "tkr-hardware", path = "../hardware", default-features = false }
